# vgm2fur

./: .gitignore  LICENSE  README.md  bitfield.py  main.py  pyproject.toml
chips/: bitfield.py  sn76489.py  ym2612.py
furnace/: __init__.py  effects.py  instruments.py  module.py  notes.py
src/: adhoc.py  bestfit.py  bitfield.py  rawdata.py
src/bitfield/: __init__.py  bitfield.py
src/chiptune/: vgm.py
src/chiptune/chips/: __init__.py  sn76489.py  ym2612_dac.py
src/chiptune/chips/fm/: ym2612.py
src/chiptune/chips/pcm/: ym2612.py
src/chiptune/chips/psg/: sn76489.py
src/chiptune/tracker/: ym2612.py
src/chiptune/vgm/: __init__.py  vgm.py
src/vgmtools/chips/: __init__.py  sn76489.py  ym2612.py  ym2612_fm.py
src/vgmtools/vgm/: __init__.py  vgm.py
transform/: __init__.py  tabulate.py  to_patterns_fm.py  to_patterns_psg.py
vgm/: __init__.py  song.py  unpacker.py
vgm2fur/: __init__.py  __main__.py  bitfield.py  main.py
vgm2fur/chips/: __init__.py  sampler.py  sn76489.py  ym2612.py
vgm2fur/furnace/: __init__.py  builder.py  effects.py  instruments.py  module.py  notes.py  sample.py
vgm2fur/transform/: __init__.py  tabulate.py  to_patterns_dac.py  to_patterns_fm.py  to_patterns_psg.py
vgm2fur/vgm/: __init__.py  song.py  unpacker.py
